# asai

./: CMakeLists.txt  MyCppPlugin.sln  README.md  privacy_policy.txt
MyCppPlugin/: MyCppPlugin.vcxproj
MyCppPlugin/Debug/: MyCppPlugin.exe.recipe
MyCppPlugin/Debug/MyCppPlugin.tlog/: MyCppPlugin.lastbuildstate
docs/: index.html
